대량 데이터 UPDATE 시 전략 비교

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -22,7 +22,7 @@ spring:
         order_updates: true
         format_sql: true
       generate_statistics: false
-    show-sql: true
+    show-sql: false
 
 logging:
   level:
