QueryDSL + fetch join 성능 비교
fetch join row 폭발 → batch_size로 대체
join depth 증가 시 OOM 가능성 테스트

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,4 +9,5 @@ include 'jpa-onetomany-scale'
 include 'exp-onetomany-bulk-delete-flush-interval'
 include 'jpa-optimistic-lock-stock'
 include 'jpa-pessimistic-lock'
+include 'jpa-fetch-strategy-lab'
 
