--- a/jpa-pessimistic-lock/src/main/resources/application-mysql.yml
+++ b/jpa-pessimistic-lock/src/main/resources/application-mysql.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/lab_pessimistic?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: 1234
+    username: ${DB_MYSQL_USERNAME:root}
+    password: ${DB_MYSQL_PASSWORD:1234}
     hikari:
       maximum-pool-size: 20
       minimum-idle: 20
