--- a/jpa-pessimistic-lock/src/main/resources/application-pg.yml
+++ b/jpa-pessimistic-lock/src/main/resources/application-pg.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     driver-class-name: org.postgresql.Driver
-    username: postgres
-    password: 1234
+    username: ${DB_PG_USERNAME:postgres}
+    password: ${DB_PG_PASSWORD:1234}
     hikari:
       maximum-pool-size: 20
       minimum-idle: 20
